<resources>
    <string name="app_name">Pohyby tovaru</string>
    <string name="activity_ListMiestnosti">Zoznam miestnosti</string>
    <string name="activity_ListBudov">Budovy a prepravky</string>
    <string name="activity_DetailMiestnosti">Miestnosť/prepravka</string>
    <string name="activity_DetailPoschodie">Detail Poschodia</string>
    <string name="activity_DetailBudova">Budova/Prepravka</string>

    <string name="action_delete">Vymazať</string>
    <string name="action_search">Hľadaj</string>
    <string name="action_hint_selecteditems">položka(y)</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_miestnosti">Budovy a prepravky</string>
    <string name="hint_nazovMiestnosti">Názov miestnosti/prepravky</string>
    <string name="hint_nazovBudovy">Názov budovy/prepravky</string>
    <string name="hint_nazovPoschodie">Názov poschodia / kategórie prepraviek</string>
    <string name="lbl_dialog_cancel">Zrušiť</string>
    <string name="lbl_dialog_save">Uložiť</string>
    <string name="bool_miestnost_distinguisher">Je to sklad ? </string>
    <string name="lbl_duplicate_miestnost">Miestnosť s rovnakými hodnotami už existuje.</string>
    <string name="lbl_duplicate_poschodie">Poschodie s rovnakým menom už existuje.</string>
    <string name="lbl_duplicate_budova">Budova s rovnakým menom už existuje.</string>
    <string name="lbl_miestnost_type">Typ:&#160;</string>
    <string name="lbl_miestnostType_Sklad">Sklad</string>
    <string name="lbl_miestnostType_Miestnost">Miestnosť</string>

    <string name="gone">gone</string>
    <string name="visible">visible</string>
    <string name="activity_ZoznamTovarov">Zoznam tovarov</string>
    <string name="nav_label_ciselniky">Číselníky</string>
    <string name="nav_label_reports">Reporty</string>
    <string name="navigation_drawer_tovary">Tovar</string>
    <string name="nav_label_save">Uložiť</string>
    <string name="hint_nazovTovaru">Názov</string>
    <string name="activity_ZoznamTovarov_Detail">Detail</string>
    <string name="hint_TovarMinimalneMnozstvo">Minimálne množstvo na sklade</string>
    <string name="lbl_error_hint_tovar_nazov">Názov Tovaru musí byť vyplnený.</string>
    <string name="hint_movement_from">z:&#160;</string>
    <string name="hint_movement_to">do:&#160;</string>
    <string name="imageViewDescription">aa</string>

    <string name="TransactionType_Add">Príjem</string>
    <string name="TransactionType_Move">Presun</string>
    <string name="TransactionType_Remove">Výdaj</string>
    <string name="TransactionType_Delete">Skartovanie</string>
    <string name="TransactionType_Inventory">Inventúra</string>
    <string name="activity_PohybTovarov">Pohyby tovarov</string>


    <string name="date_format">%1$td.%1$tm.%1$tY %1$tHH:%1$tmm</string>
    <string name="hint_tovarLookup">Vyhľadať tovar</string>
    <string name="activity_pohyb_tovar_detail_povodnyPocetKusov">Aktuálny počet kusov:</string>
    <string name="MusiteZadatHodnotuViacNezNula">Musíte zadať hodnotu väčšiu ako 0</string>
    <string name="NajprvMusiteVybratMiestnostDo">Musíte najprv vybrať miestnosť \'Do\'.</string>
    <string name="VyberMiestnosti">Výber miestnosti</string>
    <string name="AktualnePoctyTovarov">Množstvá tovarov</string>
    <string name="krok1VyberTypuTransakcie">Krok 1 - Vyber typu transakcie</string>
    <string name="krok2VyberInventara">Krok 2 - Výber tovaru</string>
    <string name="PrekroceneLimity">Chýbajúci tovar</string>
    <string name="Prehlad">Prehľady</string>
    <string name="mnozstvo_aktual_limit">akt.množstvo/limit</string>
    <string name="zoznam_poschodi">Poschodia/kategórie prepraviek </string>
    <string name="zoznam_miestnosti">Zoznam miestností / prepraviek</string>
    <string name="z_miestnosti">Odkiaľ</string>
    <string name="do_miestnosti">Kam</string>
    <string name="vMiestnosti">Kde</string>
    <string name="nedefinovanamiestnost">Nedefinovaná miestnosť</string>
    <string name="xxx">do_miestnosti</string>
    <string name="v_miestnosti">V miestnosti</string>
    <string name="cancel">Zrušiť</string>
    <string name="minimalne_mnozstvo">Minimálne množstvo</string>
    <string name="mnozstvo">Množstvo</string>
    <string name="umiestnenie">Umiestnenie</string>
    <string name="settings">Nastavenie</string>

    <string name="hint_nazovVozika">Názov vozíka</string>
    <string name="activity_ZoznamVozikov">Zoznam vozikov</string>
    <string name="navigation_drawer_voziky">Vozíky</string>
    <string name="activity_DetailVozik">Detail vozíka</string>
    <string name="lbl_error_hint_vozik_nazov">Názov vozíka musí byť vyplnený.</string>
    <string name="importTovarov">Import tovarov</string>


</resources>
