<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/Prehlad">
            <menu>
                <item
                    android:id="@+id/nav_pohybTovaru"
                    android:icon="@drawable/ic_swap_horiz_black_24dp"
                    android:title="@string/activity_PohybTovarov" />

                <item
                    android:id="@+id/nav_InventarVMiestnosti"
                    android:icon="@drawable/mnozstvo"
                    android:title="@string/AktualnePoctyTovarov" />

                <item
                    android:id="@+id/nav_MinimalneMnozstva"
                    android:icon="@drawable/ic_minimalne_mnozstva"
                    android:title="@string/PrekroceneLimity" />

            </menu>
        </item>
        <item android:title="@string/nav_label_ciselniky">
            <menu>
                <item
                    android:id="@+id/nav_miestnosti"
                    android:icon="@drawable/budova"
                    android:title="@string/navigation_drawer_miestnosti" />
<!--
                <item
                    android:id="@+id/nav_voziky"
                    android:icon="@drawable/ic_event_seat_white_24dp"
                    android:title="@string/navigation_drawer_voziky" />
-->

                <item
                    android:id="@+id/nav_tovary"
                    android:icon="@drawable/ic_event_seat_white_24dp"
                    android:title="@string/navigation_drawer_tovary" />


                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/settings" />

                <item
                    android:id="@+id/nav_import"
                    android:icon="@drawable/ic_download"
                    android:title="@string/importTovarov" />


            </menu>
        </item>
    </group>
<!--
    <item android:title="@string/nav_label_reports">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_event_seat_white_24dp"
                android:title="Import" />
              <item
                    android:id="@+id/nav_pokus_three"
                    android:icon="@drawable/ic_event_seat_white_24dp"
                    android:visible="false"
                    android:title="pokus zobrazenia troch vrstiev" />
        </menu>
    </item>
-->
</menu>