<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="right"
        android:padding="@dimen/dialog_padding_actionButtons">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayout_MiestnostName"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dialog_padding_content"
            android:textSize="16sp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txt_MiestnostName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_nazovMiestnosti" />
        </android.support.design.widget.TextInputLayout>

        <Switch
            android:id="@+id/activity_list_miestnost_jeSklad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputLayout_MiestnostName"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/bool_miestnost_distinguisher" />


        <Button
            android:id="@+id/btn_Cancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_below="@id/activity_list_miestnost_jeSklad"
            android:text="@string/lbl_dialog_cancel" />

        <Button
            android:id="@+id/btn_Save"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_below="@id/activity_list_miestnost_jeSklad"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/btn_Cancel"
            android:text="@string/lbl_dialog_save" />
    </RelativeLayout>
</LinearLayout>